--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,11 +33,11 @@ layout: default
 
     <div class="post__info">
       <div class="post__author">
-        <a href="{{site.baseurl}}/about/" class="post__author-image">
+        <a href="{{site.baseurl}}/about" class="post__author-image">
           <img class="lazy" data-src="{{site.data.settings.author.avatar}}" alt="{{site.data.settings.author.name}}">
         </a>
         <div class="post__author-info">
-          <a href="{{site.baseurl}}/about/" class="post__author-link">{{site.data.settings.author.name}}</a>
+          <a href="{{site.baseurl}}/about" class="post__author-link">{{site.data.settings.author.name}}</a>
           <span class="post__date"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time></span>
         </div>
       </div>
