--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -28,11 +28,11 @@
       </p>
 
       <div class="article__meta">
-        <a href="{{site.baseurl}}/about/" class="article__author-image">
+        <a href="{{site.baseurl}}/about" class="article__author-image">
           <img src="{{site.data.settings.author.avatar}}" alt="{{site.data.settings.author.name}}">
         </a>
         <div class="article-info">
-          <a href="{{site.baseurl}}/about/" class="article__author-link">{{site.data.settings.author.name}}</a>
+          <a href="{{site.baseurl}}/about" class="article__author-link">{{site.data.settings.author.name}}</a>
           <span class="article__date"><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></span>
         </div>
       </div>
